crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_properties_no_whitespace.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"additionalProperties\":false,\"patternProperties\":{\"^\\\\S*$\":{\"type\":\"string\"}}}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        let mut covered = false;
                        if !key
                            .as_str()
                            .chars()
                            .any(jsonschema::__private::regex::is_ecma_whitespace)
                        {
                            if !(instance.is_string()) {
                                return false;
                            }
                            covered = true;
                        }
                        if !covered {
                            return false;
                        }
                        true
                    });
                __object_pass
            }
            _ => true,
        }
