crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_props_prefix_and_regex_uneval.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"patternProperties\":{\"^a\":{},\"^b.c\":{}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                ({
                    let __object_pass = obj.iter().all(|(key, instance)| { true });
                    __object_pass
                })
                    && (obj
                        .iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if key_str.starts_with("a") || __jsonschema_regex_0(key_str)
                            {
                                true
                            } else {
                                false
                            }
                        }))
            }
            _ => false,
        }
