crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_props_single_literal.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"patternProperties\":{\"^z$\":{}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                ({
                    let __object_pass = obj.iter().all(|(key, instance)| { true });
                    __object_pass
                })
                    && (obj
                        .iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if key_str == "z" { true } else { false }
                        }))
            }
            _ => false,
        }
