crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__pattern_string_alternation.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"pattern\":\"^(a|b)$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => matches!(s.as_str(), "a" | "b"),
            _ => false,
        }
