crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__prefix_items_then_items_schema.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"items\":{\"type\":\"string\"},\"prefixItems\":[{\"type\":\"integer\"}],\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                (arr.iter().skip(1usize).all(|instance| instance.is_string()))
                    && (arr
                        .get(0usize)
                        .map_or(
                            true,
                            |instance| match instance {
                                serde_json::Value::Number(n) => {
                                    jsonschema::__private::types::is_integer(n)
                                }
                                _ => false,
                            },
                        ))
            }
            _ => false,
        }
